# sparse_dynamic_calibration

./: CMakeLists.txt  README.html  README.md  package.xml
config/: rviz.rviz
data/: tags.yaml
docker/kinetic/: Dockerfile
docker/melodic/: Dockerfile
include/g2o/: edge_icp.hpp  edge_se3_plane.hpp  edge_sim3_se3_expmap.hpp
include/sparse_dynamic_calibration/: cloud_mapper.hpp  graph_marker_publisher.hpp  graph_refinement.hpp  icp_constraints.hpp  keyframe.hpp  pose_io.hpp  sim3_estimator.hpp  static_camera.hpp  static_camera_refinement.hpp  static_tag.hpp  tag_camera_network.hpp  tag_detector.hpp  transform_publisher.hpp
launch/: calibration.launch  camera.launch  gazebo_office.launch  generate_tag_camera_network_conf.launch  refinement.launch  spawn_apriltags.launch  spawn_camera_network.launch  spawn_p3dx.launch
msg/: PoseSim3.msg  PoseSim3Stamped.msg
scripts/: cam2d_pos  camposes_gt.csv  copy_to_openptrack.py  evaluate_sim.py  person_tracking.py  record.sh  transform_points.py  validate_real.py
scripts/data/: camera_trajectory.csv  tracks.csv  trajectory.csv
src/: generate_tag_camera_network_conf.cpp  sparse_dynamic_calibration_node.cpp  sparse_dynamic_refinement_node.cpp
src/g2o/: edge_icp.cpp  edge_se3_plane.cpp  edge_sim3_se3_expmap.cpp  g2o_optimizers.cpp  robust_kernel_io.cpp
src/sparse_dynamic_calibration/: graph_marker_publisher.cpp  graph_refinement.cpp  icp_constraints.cpp  keyframe.cpp  sim3_estimator.cpp  static_camera.cpp  static_camera_refinement.cpp  tag_camera_network.cpp  tag_detector.cpp
urdf/: apriltags.urdf.xacro  camera_network.urdf.xacro  create_camera.urdf.xacro  create_kinect.urdf.xacro  office_env_large.world  p3dx_with_camera.urdf.xacro
